--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
   <div class="footer">
     <h2>1098 Breckenridge Way, Breckenridge, CO 78901</h2>
+    <p>Developed by: Ashley Mazzonna </p>
   </div>
 
   </body>
